mythtv (0.22.0+fixes22957-0ubuntu3) UNRELEASED; urgency=low

  * debian/patches/09_perl:
    - Correct the install path which broke when we renamed the packages.
      (LP: #498355)
  * debian/control:
    - Do the replaces for anything below 22958 to cover other PPA builds
      too. (LP: #498810)

 -- Mario Limonciello <superm1@ubuntu.com>  Mon, 21 Dec 2009 20:51:57 -0600

mythtv (0.22.0+fixes22957-0ubuntu2) lucid; urgency=low

  * debian/control:
    - Actually do the replaces for anything below 22957 instead to cover any
      PPA builds that people upgrade from or the very early lucid builds.
      (LP: #494705)

 -- Mario Limonciello <mario_limonciello@dell.com>  Wed, 09 Dec 2009 16:14:29 -0600

mythtv (0.22.0+fixes22957-0ubuntu1) lucid; urgency=low

  * Update to a new snapshot. (r22957) (LP: #493405)
  * debian/control:
    - Drop mythstream from suggests.
    - Replaces on mythtv-frontend
    - Make mythtv-common arch all.  All roles can support mythshutdown,
      and this fixes the archive skew from an i386 and amd64 build being
      out of sync.
    - Rename libmyth-perl to libmythtv-perl per debian request. (LP: #XXXXX)
  * Move mythshutdown into mythtv-common.
  * debian/libmyth-perl.files, rename to libmythtv-perl.files
  * debian/rules:
    - Remove references to libmyth-perl
    - Set all perl and python scripts executable (LP: #482585)

 -- Mario Limonciello <superm1@ubuntu.com>  Tue, 08 Dec 2009 19:45:24 -0600

mythtv (0.22.0+fixes22899-0ubuntu1) lucid; urgency=low

  * Update to a snapshot post 0.22 release (r22899).
  * Drop 31_vdpau_profiles.dpatch as it's been merged upstream.
  * Install mythconverg_backup and mythconverg_restore scripts
    in the mythtv-database package rather than mythtv package.
  * debian/control:
    - Drop version number in dependencies to myth* to prevent
      version skew from PPA builds.
    - Build depends on open source libvdpau optionally.